deploy: 021eae17be6dc95290e751f57ce89313ce433e46

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -253,9 +253,6 @@
                               <a href="MacroTools.Cheats.CheatAddRandomAugment.html" name="" title="CheatAddRandomAugment">CheatAddRandomAugment</a>
                           </li>
                           <li>
-                              <a href="MacroTools.Cheats.CheatAddSpell.html" name="" title="CheatAddSpell">CheatAddSpell</a>
-                          </li>
-                          <li>
                               <a href="MacroTools.Cheats.CheatAugment.html" name="" title="CheatAugment">CheatAugment</a>
                           </li>
                           <li>
@@ -266,9 +263,6 @@
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatControl.html" name="" title="CheatControl">CheatControl</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CheatDestroy.html" name="" title="CheatDestroy">CheatDestroy</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatFaction.html" name="" title="CheatFaction">CheatFaction</a>
@@ -313,13 +307,7 @@
                               <a href="MacroTools.Cheats.CheatRemove.html" name="" title="CheatRemove">CheatRemove</a>
                           </li>
                           <li>
-                              <a href="MacroTools.Cheats.CheatSetResearchLevel.html" name="" title="CheatSetResearchLevel">CheatSetResearchLevel</a>
-                          </li>
-                          <li>
                               <a href="MacroTools.Cheats.CheatSpawn.html" name="" title="CheatSpawn">CheatSpawn</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Cheats.CheatTeam.html" name="" title="CheatTeam">CheatTeam</a>
                           </li>
                           <li>
                               <a href="MacroTools.Cheats.CheatTele.html" name="" title="CheatTele">CheatTele</a>
@@ -334,20 +322,48 @@
                               <a href="MacroTools.Cheats.CheatVision.html" name="" title="CheatVision">CheatVision</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CommandAddSpell.html" name="" title="CommandAddSpell">CommandAddSpell</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CommandDestroy.html" name="" title="CommandDestroy">CommandDestroy</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CommandSetResearchLevel.html" name="" title="CommandSetResearchLevel">CommandSetResearchLevel</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Cheats.CommandTeam.html" name="" title="CommandTeam">CommandTeam</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.TestSafety.html" name="" title="TestSafety">TestSafety</a>
                           </li>
                     </ul>
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="MacroTools.CheatSystem.html" name="" title="MacroTools.CheatSystem">MacroTools.CheatSystem</a>
+                    <a href="MacroTools.Commands.html" name="" title="MacroTools.Commands">MacroTools.Commands</a>
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="MacroTools.CheatSystem.Cheat.html" name="" title="Cheat">Cheat</a>
+                              <a href="MacroTools.Commands.Cam.html" name="" title="Cam">Cam</a>
                           </li>
                           <li>
-                              <a href="MacroTools.CheatSystem.CheatManager.html" name="" title="CheatManager">CheatManager</a>
+                              <a href="MacroTools.Commands.Clear.html" name="" title="Clear">Clear</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Commands.Limited.html" name="" title="Limited">Limited</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
+                    <a href="MacroTools.CommandSystem.html" name="" title="MacroTools.CommandSystem">MacroTools.CommandSystem</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="MacroTools.CommandSystem.Command.html" name="" title="Command">Command</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.CommandSystem.CommandManager.html" name="" title="CommandManager">CommandManager</a>
                           </li>
                     </ul>
                 </li>
