deploy: a17ac4c11ab1a00c490655f8c95f16cf5f67472a

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -624,6 +624,12 @@
                               <a href="MacroTools.PassiveAbilities.HideousAppendages.html" name="" title="HideousAppendages">HideousAppendages</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.LocationBasedFlavourAbility.html" name="" title="LocationBasedFlavourAbility">LocationBasedFlavourAbility</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.PassiveAbilities.LocationBasedFlavourSetting.html" name="" title="LocationBasedFlavourSetting">LocationBasedFlavourSetting</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.OilHarvester.html" name="" title="OilHarvester">OilHarvester</a>
                           </li>
                           <li>
