deploy: 17cc6352536672c302025cc12e613ee36d968213

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -704,6 +704,15 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestFrozenThrone.html" name="" title="QuestFrozenThrone">QuestFrozenThrone</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html" name="" title="QuestIllidanKillGoblin">QuestIllidanKillGoblin</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
