deploy: ec6c078b26acc8a0e5d732783252ad1fbcf76c85

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -334,7 +334,7 @@
                               <a href="MacroTools.Cheats.CommandTeam.html" name="" title="CommandTeam">CommandTeam</a>
                           </li>
                           <li>
-                              <a href="MacroTools.Cheats.TestSafety.html" name="" title="TestSafety">TestSafety</a>
+                              <a href="MacroTools.Cheats.TestMode.html" name="" title="TestMode">TestMode</a>
                           </li>
                     </ul>
                 </li>
@@ -364,6 +364,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.CommandSystem.CommandManager.html" name="" title="CommandManager">CommandManager</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.CommandSystem.CommandType.html" name="" title="CommandType">CommandType</a>
                           </li>
                     </ul>
                 </li>
