deploy: c4cf2c71f824f7be80af033255caddadf27cb70d

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -841,6 +841,9 @@
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveTrain.html" name="" title="ObjectiveTrain">ObjectiveTrain</a>
                           </li>
                           <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveUnitIsDead.html" name="" title="ObjectiveUnitIsDead">ObjectiveUnitIsDead</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveUpgrade.html" name="" title="ObjectiveUpgrade">ObjectiveUpgrade</a>
                           </li>
                           <li>
