deploy: 5bed0dddba5314015971522965808125daf5226c

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -295,6 +295,9 @@
                               <a href="WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html" name="" title="QuestBookOfMedivh">QuestBookOfMedivh</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestTombOfSargeras.html" name="" title="QuestTombOfSargeras">QuestTombOfSargeras</a>
                           </li>
                           <li>
@@ -643,9 +646,6 @@
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestLegionKillLordaeron.html" name="" title="QuestLegionKillLordaeron">QuestLegionKillLordaeron</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Legion.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Legion.QuestSummonLegion.html" name="" title="QuestSummonLegion">QuestSummonLegion</a>
                           </li>
                     </ul>
@@ -696,10 +696,16 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestADestinyofFlameandSorrow.html" name="" title="QuestADestinyofFlameandSorrow">QuestADestinyofFlameandSorrow</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html" name="" title="QuestAetheneumTomb">QuestAetheneumTomb</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple.html" name="" title="QuestBlackTemple">QuestBlackTemple</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestEyeofSargeras.html" name="" title="QuestEyeofSargeras">QuestEyeofSargeras</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestFrozenThrone.html" name="" title="QuestFrozenThrone">QuestFrozenThrone</a>
@@ -709,9 +715,6 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
-                          </li>
-                          <li>
-                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestSkullOfGuldan.html" name="" title="QuestSkullOfGuldan">QuestSkullOfGuldan</a>
                           </li>
                     </ul>
                 </li>
