deploy: 21a49fa55fa54048d4066d2e1a8f75e80265aa52

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -701,6 +701,9 @@
                               <a href="MacroTools.Powers.LumberIncomePower.html" name="" title="LumberIncomePower">LumberIncomePower</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Powers.MaelstromWeapon.html" name="" title="MaelstromWeapon">MaelstromWeapon</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Powers.OilIncomePeriodicAction.html" name="" title="OilIncomePeriodicAction">OilIncomePeriodicAction</a>
                           </li>
                           <li>
