--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -508,6 +508,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestThunderBluff.html" name="" title="QuestThunderBluff">QuestThunderBluff</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Frostwolf.QuestWorldShaman.html" name="" title="QuestWorldShaman">QuestWorldShaman</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
