deploy: cc5b00630e672512af9af32a70dcb72e3f1e2667

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -18,6 +18,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.Color.html" name="" title="Color">Color</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.CustomPlayerUnitEvents.html" name="" title="CustomPlayerUnitEvents">CustomPlayerUnitEvents</a>
                           </li>
                           <li>
@@ -991,6 +994,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.Spells.Slipstream.SlipstreamSpell.html" name="" title="SlipstreamSpell">SlipstreamSpell</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Spells.Slipstream.SlipstreamSpellSpecificLocation.html" name="" title="SlipstreamSpellSpecificLocation">SlipstreamSpellSpecificLocation</a>
                           </li>
                     </ul>
                 </li>
