deploy: 2756ce9b49ba9a183b252184fe541863b2f6c9bf

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -695,6 +695,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.Powers.CityOfHeroes.html" name="" title="CityOfHeroes">CityOfHeroes</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Powers.DummyPower.html" name="" title="DummyPower">DummyPower</a>
                           </li>
                           <li>
