deploy: 3c42cec989033ac772320af8b61a1f7c5f930ec1

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -719,6 +719,9 @@
                               <a href="MacroTools.Powers.RapidMobilization.html" name="" title="RapidMobilization">RapidMobilization</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Powers.Rematerialization.html" name="" title="Rematerialization">Rematerialization</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Powers.TitanicStrength.html" name="" title="TitanicStrength">TitanicStrength</a>
                           </li>
                           <li>
