--- a/api-macroTools/MacroTools.FactionSystem.Faction.html
+++ b/api-macroTools/MacroTools.FactionSystem.Faction.html
@@ -1410,7 +1410,7 @@ based on its name.</p>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static event EventHandler&lt;Faction&gt;? IconChanged</code></pre>
+    <pre><code class="lang-csharp hljs">public event EventHandler&lt;Faction&gt;? IconChanged</code></pre>
   </div>
   <h5 class="eventType">Event Type</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -1530,7 +1530,7 @@ based on its name.</p>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static event EventHandler&lt;Faction&gt;? StatusChanged</code></pre>
+    <pre><code class="lang-csharp hljs">public event EventHandler&lt;Faction&gt;? StatusChanged</code></pre>
   </div>
   <h5 class="eventType">Event Type</h5>
   <table class="table table-bordered table-striped table-condensed">
