--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -558,6 +558,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.Libraries.DestructibleHider.html" name="" title="DestructibleHider">DestructibleHider</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Libraries.Display.html" name="" title="Display">Display</a>
                           </li>
                           <li>
