--- a/api-macroTools/MacroTools.Libraries.DestructibleHider.html
+++ b/api-macroTools/MacroTools.Libraries.DestructibleHider.html
@@ -73,7 +73,8 @@
   
   <h1 id="MacroTools_Libraries_DestructibleHider" data-uid="MacroTools.Libraries.DestructibleHider" class="text-break">Class DestructibleHider
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>Responsible for hiding destructibles which are not within a player's view.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -84,7 +85,7 @@
   <h6><strong>Assembly</strong>: MacroTools.dll</h6>
   <h5 id="MacroTools_Libraries_DestructibleHider_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public class DestructibleHider : object</code></pre>
+    <pre><code class="lang-csharp hljs">public static class DestructibleHider : object</code></pre>
   </div>
   <h3 id="methods">Methods
   </h3>
@@ -93,7 +94,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Libraries_DestructibleHider_Register_destructable_.md&amp;value=---%0Auid%3A%20MacroTools.Libraries.DestructibleHider.Register(destructable)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Libraries/DestructibleHider.cs/#L116">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Libraries/DestructibleHider.cs/#L117">View Source</a>
   </span>
   <a id="MacroTools_Libraries_DestructibleHider_Register_" data-uid="MacroTools.Libraries.DestructibleHider.Register*"></a>
   <h4 id="MacroTools_Libraries_DestructibleHider_Register_destructable_" data-uid="MacroTools.Libraries.DestructibleHider.Register(destructable)">Register(destructable)</h4>
@@ -126,7 +127,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Libraries_DestructibleHider_Unregister_destructable_.md&amp;value=---%0Auid%3A%20MacroTools.Libraries.DestructibleHider.Unregister(destructable)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Libraries/DestructibleHider.cs/#L129">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Libraries/DestructibleHider.cs/#L130">View Source</a>
   </span>
   <a id="MacroTools_Libraries_DestructibleHider_Unregister_" data-uid="MacroTools.Libraries.DestructibleHider.Unregister*"></a>
   <h4 id="MacroTools_Libraries_DestructibleHider_Unregister_destructable_" data-uid="MacroTools.Libraries.DestructibleHider.Unregister(destructable)">Unregister(destructable)</h4>
@@ -165,7 +166,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_Libraries_DestructibleHider.md&amp;value=---%0Auid%3A%20MacroTools.Libraries.DestructibleHider%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Libraries/DestructibleHider.cs/#L52" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/Libraries/DestructibleHider.cs/#L55" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
