--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -614,6 +614,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="MacroTools.Missiles.html" name="" title="MacroTools.Missiles">MacroTools.Missiles</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="MacroTools.Missiles.DefensiveOrbMissile.html" name="" title="DefensiveOrbMissile">DefensiveOrbMissile</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="MacroTools.PassiveAbilities.html" name="" title="MacroTools.PassiveAbilities">MacroTools.PassiveAbilities</a>
                     
                     <ul class="nav level2">
@@ -622,6 +632,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.AnimationSpeedMultiplier.html" name="" title="AnimationSpeedMultiplier">AnimationSpeedMultiplier</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.PassiveAbilities.DefensiveOrbs.html" name="" title="DefensiveOrbs">DefensiveOrbs</a>
                           </li>
                           <li>
                               <a href="MacroTools.PassiveAbilities.Execute.html" name="" title="Execute">Execute</a>
