deploy: cfff5393146965b73619793b39886b9044888bb3

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -738,6 +738,9 @@
                               <a href="MacroTools.Powers.TitanicStrength.html" name="" title="TitanicStrength">TitanicStrength</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Powers.UnitsStealMana.html" name="" title="UnitsStealMana">UnitsStealMana</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Powers.VisionPower.html" name="" title="VisionPower">VisionPower</a>
                           </li>
                     </ul>
