deploy: 81801a7349c409871b05bcddf6d4063d145f76dc

--- a/api-macroTools/MacroTools.CustomPlayerUnitEvents.html
+++ b/api-macroTools/MacroTools.CustomPlayerUnitEvents.html
@@ -73,7 +73,7 @@
   
   <h1 id="MacroTools_CustomPlayerUnitEvents" data-uid="MacroTools.CustomPlayerUnitEvents" class="text-break">Class CustomPlayerUnitEvents
   </h1>
-  <div class="markdown level0 summary"><p>Provides a set of custom player unit events for the <see cref="!:PlayerUnitEvent"></see> system.</p>
+  <div class="markdown level0 summary"><p>Provides a set of custom player unit events for the <see cref="!:PlayerUnitEvents"></see> system.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
