deploy: acaeb6519b8b90cb17eeb25f1fd1b6317f1b4daa

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -141,6 +141,9 @@
                               <a href="WarcraftLegacies.Source.GameLogic.RefundZeroLimitUnits.html" name="" title="RefundZeroLimitUnits">RefundZeroLimitUnits</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.RemoveUnusedAreas.html" name="" title="RemoveUnusedAreas">RemoveUnusedAreas</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.GameLogic.ShipyardBanZones.html" name="" title="ShipyardBanZones">ShipyardBanZones</a>
                           </li>
                           <li>
