deploy: c088237e254ad5a73774b01aa8dcfdeaa642c671

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -414,6 +414,9 @@
                               <a href="MacroTools.Extensions.FrameExtensions.html" name="" title="FrameExtensions">FrameExtensions</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Extensions.GroupExtensions.html" name="" title="GroupExtensions">GroupExtensions</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Extensions.ItemExtensions.html" name="" title="ItemExtensions">ItemExtensions</a>
                           </li>
                           <li>
@@ -1076,9 +1079,6 @@
                     <ul class="nav level2">
                           <li>
                               <a href="MacroTools.Wrappers.EaxExtensions.html" name="" title="EaxExtensions">EaxExtensions</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Wrappers.GroupWrapper.html" name="" title="GroupWrapper">GroupWrapper</a>
                           </li>
                           <li>
                               <a href="MacroTools.Wrappers.SoundEax.html" name="" title="SoundEax">SoundEax</a>
