deploy: 9ac10c8cd94098f4ac105814d0c7062fcc4118a4

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -53,6 +53,9 @@
                           <li>
                               <a href="MacroTools.UnitType.html" name="" title="UnitType">UnitType</a>
                           </li>
+                          <li>
+                              <a href="MacroTools.WarningLogger.html" name="" title="WarningLogger">WarningLogger</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
