deploy: dbb4003b751078f595c1761948bf615cf817a294

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -679,6 +679,9 @@
                               <a href="MacroTools.PassiveAbilities.SpellResistanceAura.html" name="" title="SpellResistanceAura">SpellResistanceAura</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.SummonUnitOnDeath.html" name="" title="SummonUnitOnDeath">SummonUnitOnDeath</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.TakeExtraDamageOnWater.html" name="" title="TakeExtraDamageOnWater">TakeExtraDamageOnWater</a>
                           </li>
                           <li>
