--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1333,6 +1333,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Spells.DruidsSpellSetup.html" name="" title="DruidsSpellSetup">DruidsSpellSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.FelHordeSpellSetup.html" name="" title="FelHordeSpellSetup">FelHordeSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.ForsakenSpellSetup.html" name="" title="ForsakenSpellSetup">ForsakenSpellSetup</a>
                           </li>
                           <li>
