deploy: 15fc53dd760219f38aad4ea0f7d777af9fe9419f

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1026,6 +1026,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Cameras.html" name="" title="Cameras">Cameras</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.CapturableUnitSetup.html" name="" title="CapturableUnitSetup">CapturableUnitSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.CheatSetup.html" name="" title="CheatSetup">CheatSetup</a>
                           </li>
                           <li>
