--- a/api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.html
+++ b/api-source/WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.html
@@ -73,7 +73,7 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip" class="text-break">Class QuestUnlockShip
   </h1>
-  <div class="markdown level0 summary"><p>Proudmoore captial ship starts locked. Boralus and Dazar'Alor must be captured to unlock it.</p>
+  <div class="markdown level0 summary"><p>Proudmoore captial ship starts locked. Take control of Kul Tiras to unlock it.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
@@ -170,7 +170,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_CompletionPopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L49">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L53">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_CompletionPopup_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.CompletionPopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_CompletionPopup" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.CompletionPopup">CompletionPopup</h4>
@@ -202,7 +202,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_FailurePopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.FailurePopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L41">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L45">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_FailurePopup_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.FailurePopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_FailurePopup" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.FailurePopup">FailurePopup</h4>
@@ -234,7 +234,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_PenaltyDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.PenaltyDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L45">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L49">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_PenaltyDescription_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.PenaltyDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_PenaltyDescription" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.PenaltyDescription">PenaltyDescription</h4>
@@ -266,7 +266,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L52">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L56">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.RewardDescription">RewardDescription</h4>
@@ -300,7 +300,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_OnComplete_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.OnComplete(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L56">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L60">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_OnComplete_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.OnComplete*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_OnComplete_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.OnComplete(MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -334,7 +334,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_OnFail_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.OnFail(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L74">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L76">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_OnFail_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.OnFail*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip_OnFail_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip.OnFail(MacroTools.FactionSystem.Faction)">OnFail(Faction)</h4>
@@ -374,7 +374,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_KulTiras_QuestUnlockShip.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.KulTiras.QuestUnlockShip%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L18" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/KulTiras/QuestUnlockShip.cs/#L19" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
