--- a/api-source/WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.html
@@ -73,7 +73,8 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens" class="text-break">Class QuestVaultoftheWardens
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>Capture the Vault of the Wardens to learn to train Wardens.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -133,7 +134,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens__ctor.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.%23ctor%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L15">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L18">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens__ctor_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens__ctor" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.#ctor">QuestVaultoftheWardens()</h4>
@@ -150,7 +151,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_CompletionPopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L24">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L28">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_CompletionPopup_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.CompletionPopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_CompletionPopup" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.CompletionPopup">CompletionPopup</h4>
@@ -182,7 +183,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L27">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L32">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.RewardDescription">RewardDescription</h4>
@@ -216,7 +217,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_OnAdd_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.OnAdd(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L40">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L45">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_OnAdd_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.OnAdd*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_OnAdd_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.OnAdd(MacroTools.FactionSystem.Faction)">OnAdd(Faction)</h4>
@@ -250,7 +251,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_OnComplete_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.OnComplete(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L30">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L36">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_OnComplete_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.OnComplete*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens_OnComplete_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens.OnComplete(MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -290,7 +291,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Sentinels_QuestVaultoftheWardens.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Sentinels.QuestVaultoftheWardens%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L11" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Sentinels/QuestVaultoftheWardens.cs/#L13" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
