deploy: fd1c254c52a527ce79bda0090e6dd424dab6d511

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -39,6 +39,12 @@
                           <li>
                               <a href="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasCooldowns.html" name="" title="EyeOfSargerasCooldowns">EyeOfSargerasCooldowns</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasMissile.html" name="" title="EyeOfSargerasMissile">EyeOfSargerasMissile</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasPickup.html" name="" title="EyeOfSargerasPickup">EyeOfSargerasPickup</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
