deploy: 4ba203183fa92ec64b9b21ae62b964025904713c

--- a/api-source/WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasCooldowns.html
+++ b/api-source/WarcraftLegacies.Source.ArtifactBehaviour.EyeOfSargerasCooldowns.html
@@ -85,7 +85,7 @@
   <h6><strong>Assembly</strong>: WarcraftLegacies.Source.dll</h6>
   <h5 id="WarcraftLegacies_Source_ArtifactBehaviour_EyeOfSargerasCooldowns_syntax">Syntax</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public sealed class EyeOfSargerasCooldowns : object</code></pre>
+    <pre><code class="lang-csharp hljs">public static class EyeOfSargerasCooldowns : object</code></pre>
   </div>
   <h3 id="methods">Methods
   </h3>
