--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -307,6 +307,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Powers.html" name="" title="WarcraftLegacies.Source.Powers">WarcraftLegacies.Source.Powers</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Powers.ShaladrassilsBlessing.html" name="" title="ShaladrassilsBlessing">ShaladrassilsBlessing</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Quests.html" name="" title="WarcraftLegacies.Source.Quests">WarcraftLegacies.Source.Quests</a>
                     
                     <ul class="nav level2">
@@ -430,6 +440,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.html" name="" title="QuestMalfurionAwakens">QuestMalfurionAwakens</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Druids.QuestShaladrassil.html" name="" title="QuestShaladrassil">QuestShaladrassil</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Druids.QuestTortolla.html" name="" title="QuestTortolla">QuestTortolla</a>
