deploy: e93cabedba20b96bf19facd2147a3909c85a0471

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -810,6 +810,9 @@
                               <a href="MacroTools.QuestSystem.UtilityStructs.IHasCompletingUnit.html" name="" title="IHasCompletingUnit">IHasCompletingUnit</a>
                           </li>
                           <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.NoOtherPlayerGetsCapital.html" name="" title="NoOtherPlayerGetsCapital">NoOtherPlayerGetsCapital</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveAcquireArtifact.html" name="" title="ObjectiveAcquireArtifact">ObjectiveAcquireArtifact</a>
                           </li>
                           <li>
@@ -862,6 +865,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveHeroWithLevelInRect.html" name="" title="ObjectiveHeroWithLevelInRect">ObjectiveHeroWithLevelInRect</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveKillAllInArea.html" name="" title="ObjectiveKillAllInArea">ObjectiveKillAllInArea</a>
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveKillUnit.html" name="" title="ObjectiveKillUnit">ObjectiveKillUnit</a>
