--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -321,6 +321,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestBlackrookHold.html" name="" title="QuestBlackrookHold">QuestBlackrookHold</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestBookOfMedivh.html" name="" title="QuestBookOfMedivh">QuestBookOfMedivh</a>
                           </li>
                           <li>
