deploy: 691acf30bd6f6ae765a05b1dd6e019c167ed0cb3

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -391,6 +391,9 @@
                               <a href="MacroTools.ControlPointSystem.ControlPointOwnerChangeEventArgs.html" name="" title="ControlPointOwnerChangeEventArgs">ControlPointOwnerChangeEventArgs</a>
                           </li>
                           <li>
+                              <a href="MacroTools.ControlPointSystem.DefenderSettings.html" name="" title="DefenderSettings">DefenderSettings</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.ControlPointSystem.UnitExtensions.html" name="" title="UnitExtensions">UnitExtensions</a>
                           </li>
                     </ul>
