deploy: bd78651530e5d2c2845e639df6b3725e40966286

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -697,7 +697,10 @@
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestFrozenThrone.html" name="" title="QuestFrozenThrone">QuestFrozenThrone</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestIllidanKillGoblin.html" name="" title="QuestIllidanKillGoblin">QuestIllidanKillGoblin</a>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestLostOnes.html" name="" title="QuestLostOnes">QuestLostOnes</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Naga.QuestMurmur.html" name="" title="QuestMurmur">QuestMurmur</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.Naga.QuestRegroupCastaway.html" name="" title="QuestRegroupCastaway">QuestRegroupCastaway</a>
@@ -1318,6 +1321,9 @@
                     <a href="WarcraftLegacies.Source.Setup.Spells.html" name="" title="WarcraftLegacies.Source.Setup.Spells">WarcraftLegacies.Source.Setup.Spells</a>
                     
                     <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.DraeneiSpellSetup.html" name="" title="DraeneiSpellSetup">DraeneiSpellSetup</a>
+                          </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.DragonmawSpellSetup.html" name="" title="DragonmawSpellSetup">DragonmawSpellSetup</a>
                           </li>
