deploy: 6d88c85f593464f3556a7bfd8d1ddebf3657bd0a

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -382,6 +382,9 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.ControlPointSystem.ControlLevelSettings.html" name="" title="ControlLevelSettings">ControlLevelSettings</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.ControlPointSystem.ControlPoint.html" name="" title="ControlPoint">ControlPoint</a>
                           </li>
                           <li>
@@ -389,9 +392,6 @@
                           </li>
                           <li>
                               <a href="MacroTools.ControlPointSystem.ControlPointOwnerChangeEventArgs.html" name="" title="ControlPointOwnerChangeEventArgs">ControlPointOwnerChangeEventArgs</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.ControlPointSystem.DefenderSettings.html" name="" title="DefenderSettings">DefenderSettings</a>
                           </li>
                           <li>
                               <a href="MacroTools.ControlPointSystem.UnitExtensions.html" name="" title="UnitExtensions">UnitExtensions</a>
