deploy: 220e08112f7ebc446ea2e6944993dc72679453de

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -831,6 +831,9 @@
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveBuild.html" name="" title="ObjectiveBuild">ObjectiveBuild</a>
                           </li>
                           <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveBuildInRect.html" name="" title="ObjectiveBuildInRect">ObjectiveBuildInRect</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveCapitalDead.html" name="" title="ObjectiveCapitalDead">ObjectiveCapitalDead</a>
                           </li>
                           <li>
@@ -922,6 +925,9 @@
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveUnitIsDead.html" name="" title="ObjectiveUnitIsDead">ObjectiveUnitIsDead</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveUnitReachesFullHealth.html" name="" title="ObjectiveUnitReachesFullHealth">ObjectiveUnitReachesFullHealth</a>
                           </li>
                           <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveUpgrade.html" name="" title="ObjectiveUpgrade">ObjectiveUpgrade</a>
