--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -370,6 +370,12 @@
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestBrokenOne.html" name="" title="QuestBrokenOne">QuestBrokenOne</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Quests.Draenei.QuestRebuildCivilisation.html" name="" title="QuestRebuildCivilisation">QuestRebuildCivilisation</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.Draenei.QuestRepairExodarHull.html" name="" title="QuestRepairExodarHull">QuestRepairExodarHull</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Quests.Draenei.QuestShipArgus.html" name="" title="QuestShipArgus">QuestShipArgus</a>
                           </li>
                           <li>
