deploy: 5c5f85d69bcf940fca21dbafcb2e3ddb8a159160

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -611,10 +611,7 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="MacroTools.Mechanics.StructurePacking.html" name="" title="StructurePacking">StructurePacking</a>
-                          </li>
-                          <li>
-                              <a href="MacroTools.Mechanics.StructurePacking.PackableStructure.html" name="" title="StructurePacking.PackableStructure">StructurePacking.PackableStructure</a>
+                              <a href="MacroTools.Mechanics.PackableStructure.html" name="" title="PackableStructure">PackableStructure</a>
                           </li>
                           <li>
                               <a href="MacroTools.Mechanics.Waygate.html" name="" title="Waygate">Waygate</a>
