--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -204,6 +204,16 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.html" name="" title="WarcraftLegacies.Source.Mechanics.Frostwolf">WarcraftLegacies.Source.Mechanics.Frostwolf</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.FrostwolfStructurePackingConfig.html" name="" title="FrostwolfStructurePackingConfig">FrostwolfStructurePackingConfig</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Mechanics.Goblins.html" name="" title="WarcraftLegacies.Source.Mechanics.Goblins">WarcraftLegacies.Source.Mechanics.Goblins</a>
                     
                     <ul class="nav level2">
