deploy: 9721f640228d6cd88813087d794666ce4dba1867

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -849,6 +849,9 @@
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveControlLegend.html" name="" title="ObjectiveControlLegend">ObjectiveControlLegend</a>
                           </li>
                           <li>
+                              <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveControlLevel.html" name="" title="ObjectiveControlLevel">ObjectiveControlLevel</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.QuestSystem.UtilityStructs.ObjectiveControlPoint.html" name="" title="ObjectiveControlPoint">ObjectiveControlPoint</a>
                           </li>
                           <li>
